manifests/heimdall/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
  labels:
    app.kubernetes.io/name: heimdall
