manifests/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: heimdall
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heimdall
    spec:
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall-config
