manifests/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: heimdall
